rocket_sunset/tests/build/invalid_sunset_format.stderr
error: Sunset timestamp is not a valid ISO8601 timestamp
  --> tests/build/invalid_sunset_format.rs:11:48
   |
11 | #[deprecation("2024-12-31T23:59:59Z", sunset = "2024-12-31 23:59:59")]
   |                                                ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `DeprecatedResponder`
 --> tests/build/invalid_sunset_format.rs:7:5
  |
7 |     DeprecatedResponder,
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0423]: expected function, found struct `index`
  --> tests/build/invalid_sunset_format.rs:12:19
   |
10 | #[get("/")]
   | -----------
   | |
   | `index` defined here
   | in this procedural macro expansion
11 | #[deprecation("2024-12-31T23:59:59Z", sunset = "2024-12-31 23:59:59")]
12 | pub fn index() -> &'static str {
   |                   ^ help: use struct literal syntax instead: `index {}`
   |
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)
